fixing submit button on mobile

--- a/mainSite.css
+++ b/mainSite.css
@@ -216,6 +216,7 @@ input[type=text]::placeholder, input[type=email]::placeholder, textarea::placeho
     font-family: 'Open Sans', sans-serif;
     font-size: 100%;
     color: #55ACEE;
+    -webkit-appearance: none;
 }
 
 .submitButton:hover {
